--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
-  "name": "Block shit!",
+  "name": "Scripts",
   "version": "1.0",
-  "description": "Block some shit",
+  "description": "Random collection of scripts to be run on specific pages",
   "permissions": ["tabs"],
+  "manifest_version": 2,
   "content_scripts": [
       {
 	  "matches": ["http://*/*", "https://*/*"],
-	  "js": ["jquery.js", "block_shit.js"]
+	  "js": ["jquery.js", "scripts.js"]
       }
   ]
 }
